@@ -3,12 +3,32 @@ package enkan.system;
 import enkan.component.ComponentRelationship;
 import enkan.component.LifecycleManager;
 import enkan.component.SystemComponent;
+import enkan.exception.MisconfigurationException;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
 /**
- * Enkan system.
+ * The top-level container that owns and orchestrates all system components.
+ *
+ * <p>An {@code EnkanSystem} is constructed via the static factory
+ * {@link #of(Object...)} which accepts interleaved name/component pairs:
+ *
+ * <pre>{@code
+ * EnkanSystem system = EnkanSystem.of(
+ *     "datasource", new HikariCPComponent(...),
+ *     "jpa",        new JpaProvider(...),
+ *     "app",        new ApplicationComponent(...)
+ * ).relationships(
+ *     ComponentRelationship.component("jpa").using("datasource"),
+ *     ComponentRelationship.component("app").using("jpa")
+ * );
+ * system.start();
+ * }</pre>
+ *
+ * <p>Components are started in declaration order (respecting the dependency
+ * order established by {@link #relationships}) and stopped in reverse order,
+ * ensuring a clean shutdown even when components depend on one another.
  *
  * @author kawasima
  */
@@ -28,13 +48,29 @@ public class EnkanSystem {
      * @return enkan system
      */
     public static EnkanSystem of(Object... args) {
+        if (args.length % 2 != 0) {
+            throw new MisconfigurationException("core.INVALID_SYSTEM_ARGS", args.length);
+        }
         EnkanSystem system = new EnkanSystem();
         for(int i = 0; i < args.length; i += 2) {
+            if (!(args[i + 1] instanceof SystemComponent)) {
+                throw new MisconfigurationException("core.INVALID_COMPONENT", args[i], args[i + 1].getClass().getName());
+            }
             system.setComponent(args[i].toString(), (SystemComponent<?>) args[i + 1]);
         }
         return system;
     }
 
+    /**
+     * Registers a component under the given name.
+     *
+     * <p>Components are started and stopped in the order they are registered
+     * (subject to any ordering imposed by {@link #relationships}).
+     *
+     * @param <T>       the self-type of the component
+     * @param name      the unique name used to look up this component
+     * @param component the component instance to register
+     */
     public <T extends SystemComponent<T>> void setComponent(String name, SystemComponent<T> component) {
         components.put(name, component);
         componentsOrder.add(name);
@@ -50,6 +86,18 @@ public class EnkanSystem {
     }
 
     /**
+     * Returns an unmodifiable view of the name-to-component map,
+     * preserving the registration order.
+     *
+     * @return map of component name to component instance
+     */
+    public Map<String, SystemComponent<?>> getComponentMap() {
+        Map<String, SystemComponent<?>> ordered = new LinkedHashMap<>();
+        componentsOrder.forEach(name -> ordered.put(name, components.get(name)));
+        return Collections.unmodifiableMap(ordered);
+    }
+
+    /**
      * Get a component by its name.
      *
      * @param name component name
@@ -60,6 +108,15 @@ public class EnkanSystem {
         return (T) components.get(name);
     }
 
+    /**
+     * Returns the component registered under {@code name}, cast to
+     * {@code componentType}, or {@code null} if no matching component exists.
+     *
+     * @param <T>           the expected component type
+     * @param name          the registered component name
+     * @param componentType the class of the expected component type
+     * @return the component, or {@code null}
+     */
     public <T extends SystemComponent<T>> T getComponent(String name, Class<? extends T> componentType) {
         return components.entrySet()
                 .stream()
@@ -81,7 +138,7 @@ public class EnkanSystem {
                 .stream()
                 .filter(componentType::isInstance)
                 .map(componentType::cast)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -102,23 +159,31 @@ public class EnkanSystem {
     /**
      * Start all components
      */
-    @SuppressWarnings("unchecked")
-    public <T extends SystemComponent<T>> void start() {
+    public void start() {
         componentsOrder.stream()
                 .map(components::get)
-                .forEach(component -> LifecycleManager.start((T) component));
+                .forEach(EnkanSystem::startComponent);
     }
 
     /**
      * Stop all components
      */
-    @SuppressWarnings("unchecked")
-    public <T extends SystemComponent<T>> void stop() {
+    public void stop() {
         List<String> reverse = new ArrayList<>(componentsOrder);
         Collections.reverse(reverse);
         reverse.stream()
                 .map(components::get)
-                .forEach(component -> LifecycleManager.stop((T) component));
+                .forEach(EnkanSystem::stopComponent);
+    }
+
+    @SuppressWarnings("unchecked")
+    private static <T extends SystemComponent<T>> void startComponent(SystemComponent<?> component) {
+        LifecycleManager.start((T) component);
+    }
+
+    @SuppressWarnings("unchecked")
+    private static <T extends SystemComponent<T>> void stopComponent(SystemComponent<?> component) {
+        LifecycleManager.stop((T) component);
     }
 
     @Override
